[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_it"
version = "1.0.0"
maintainers = [
  { name="Billie-Jo Powers", email="b.powers@lancaster.ac.uk" },
]
authors = [
  { name="Billie-Jo Powers", email="b.powers@lancaster.ac.uk"},
]
description = "Gives optimal policy and value for a problem using the value iteration method."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/bpowers402"